fix: tag at the bottom had no spacing between them

--- a/theme/static/css/all.sass
+++ b/theme/static/css/all.sass
@@ -323,3 +323,8 @@ blockquote
         vertical-align: -0.4em
     p
         display: inline
+
+// the tags at the bottom had no spacing between them for some reason
+.sidebar-tags a
+    margin-right: 1em
+
